fix: other test paths

--- a/cra-react-app-rewired/package.json
+++ b/cra-react-app-rewired/package.json
@@ -8,7 +8,7 @@
     "build": "pnpm --filter cra-react-app-rewired_* --parallel build",
     "serve": "pnpm --filter cra-react-app-rewired_* --parallel serve",
     "clean": "pnpm --filter cra-react-app-rewired_* --parallel clean",
-    "e2e:ci": "pnpm start & sleep 30 && echo 'test' && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & sleep 10 && echo 'test' && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.2.0"
