--- a/react-nextjs/nextjs-host-react-remote/host/package.json
+++ b/react-nextjs/nextjs-host-react-remote/host/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8080",
+    "start": "next dev -p 8080",
     "build": "next build",
-    "start": "next start",
+    "start:prod": "next start",
     "lint": "next lint"
   },
   "dependencies": {
