fix: other test paths

--- a/i18next-nextjs-react/i18next-shared-lib/package.json
+++ b/i18next-nextjs-react/i18next-shared-lib/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "postinstall": "tsc",
     "build": "tsc",
     "dev": "tsc --watch"
   },
