--- a/i18next-nextjs-react/next-host/package.json
+++ b/i18next-nextjs-react/next-host/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^6.1.8",
-    "i18next-shared-lib": "file:../i18next-shared-lib",
+    "i18next-shared-lib": "workspace:*",
     "next": "12.3.4",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
