fix: other test paths

--- a/i18next-nextjs-react/i18next-shared-lib/package.json
+++ b/i18next-nextjs-react/i18next-shared-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i18next-nextjs-react_i18next-shared-lib",
+  "name": "i18next-shared-lib",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
