--- a/i18next-nextjs-react/react-remote/package.json
+++ b/i18next-nextjs-react/react-remote/package.json
@@ -33,7 +33,7 @@
     "webpack-dev-server": "4.15.1"
   },
   "dependencies": {
-    "i18next-shared-lib": "workspace:*",
+    "i18next-shared-lib": "../i18next-shared-lib",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^6.1.8",
     "react-i18next": "^11.18.6",
