--- a/medusa-example/package.json
+++ b/medusa-example/package.json
@@ -12,7 +12,8 @@
     "serve:nav": "cd nav; pnpm serve",
     "serve:search": "cd search; pnpm serve",
     "serve:utils": "cd utils; pnpm serve",
-    "clean": "pnpm --filter --scope @dashboard/* --parallel clean"
+    "clean": "pnpm --filter --scope @dashboard/* --parallel clean",
+    "e2e:ci": "pnpm run build && echo \"No e2e tests yet\""
   },
   "devDependencies": {
     "concurrently": "7.6.0"
