--- a/modernjs/package.json
+++ b/modernjs/package.json
@@ -6,7 +6,8 @@
     "start": "concurrently \"cd ./host && pnpm dev\" \"cd ./provider && pnpm dev\"",
     "build": "concurrently \"cd ./host && pnpm build\" \"cd ./provider && pnpm build\"",
     "serve": "concurrently \"cd ./host && pnpm serve\" \"cd ./provider && pnpm serve\"",
-    "clean": "concurrently \"cd ./host && pnpm clean\" \"cd ./provider && pnpm clean\""
+    "clean": "concurrently \"cd ./host && pnpm clean\" \"cd ./provider && pnpm clean\"",
+    "e2e:ci": "pnpm run build && echo \"No e2e tests yet\""
   },
   "devDependencies": {}
 }
