--- a/vite-vue-microfrontends/host/package.json
+++ b/vite-vue-microfrontends/host/package.json
@@ -20,6 +20,7 @@
     "@module-federation/vite": "0.2.8",
     "@rushstack/eslint-patch": "1.5.1",
     "@softarc/native-federation-esbuild": "1.1.2",
+    "@softarc/native-federation": "1.1.2",
     "@types/node": "18.18.13",
     "@vitejs/plugin-vue": "4.0.0",
     "@vitejs/plugin-vue-jsx": "3.1.0",
