--- a/vue-cli/consumer/package.json
+++ b/vue-cli/consumer/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "http-server": "^14.1.1",
     "@vue/cli-plugin-babel": "5.0.8",
     "@vue/cli-plugin-eslint": "5.0.8",
     "@vue/cli-service": "5.0.8",
