--- a/nextjs-v13/package.json
+++ b/nextjs-v13/package.json
@@ -12,6 +12,7 @@
     "start": "concurrently \"npm --prefix checkout run dev\" \"npm --prefix home run dev\" \"npm --prefix shop run dev\"",
     "build": "concurrently \"npm --prefix checkout run build\" \"npm --prefix home run build\" \"npm --prefix shop run build\"",
     "serve": "concurrently \"npm --prefix checkout run start\" \"npm --prefix home run start\" \"npm --prefix shop run start\""
+    "e2e:ci": "pnpm run build"
   },
   "dependencies": {
     "concurrently": "7.6.0"
