--- a/vue-cli/core/package.json
+++ b/vue-cli/core/package.json
@@ -22,7 +22,8 @@
     "eslint": "8.54.0",
     "eslint-plugin-vue": "8.6.0",
     "vue-template-compiler": "2.7.14",
-    "webpack": "5.89.0"
+    "webpack": "5.89.0",
+    "http-server": "^14.1.1"
   },
   "eslintConfig": {
     "root": true,
