feat: use @module-federation/runtime

--- a/dynamic-system-host/app2/package.json
+++ b/dynamic-system-host/app2/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "moment": "^2.29.4",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "@module-federation/runtime": "^1.0.0-canary.1"
   }
 }
