--- a/dynamic-system-host/app3/package.json
+++ b/dynamic-system-host/app3/package.json
@@ -22,6 +22,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "@module-federation/runtime": "^1.0.0-canary.1"
   }
 }
