--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -157,6 +157,7 @@ jobs:
         id: run-sample-e2e-tests
         run: |
           node -v
+          npx cypress install
           pnpm --filter "${{ matrix.container }}" e2e:ci
 
       - name: Create artifacts for Allure report
