--- a/dynamic-system-host/app1/package.json
+++ b/dynamic-system-host/app1/package.json
@@ -21,6 +21,6 @@
     "@module-federation/utilities": "^1.4.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "@module-federation/runtime": "^1.0.0-canary.1"
+    "@module-federation/runtime": "0.0.0-canary-1701694314517"
   }
 }
