--- a/advanced-api/automatic-vendor-sharing/app2/package.json
+++ b/advanced-api/automatic-vendor-sharing/app2/package.json
@@ -7,13 +7,18 @@
     "babel-loader": "9.1.3",
     "html-webpack-plugin": "5.5.3",
     "serve": "14.2.1",
-    "webpack": "5.89.0",
-    "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1"
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "start": "webpack-cli serve",
-    "build": "webpack --mode production",
+    "start": "rspack serve -c rspack.config.js",
+    "build": "rspack build --mode production -c rspack.config.js",
+    "legacy:start": "webpack serve --config webpack.config.js",
+    "legacy:build": "webpack --config webpack.config.js  --mode production",
     "serve": "serve dist -p 3002",
     "clean": "rm -rf dist"
   },
