--- a/advanced-api/automatic-vendor-sharing/package.json
+++ b/advanced-api/automatic-vendor-sharing/package.json
@@ -11,6 +11,8 @@
     "build": "pnpm --filter automatic-vendor-sharing_app* --parallel build",
     "serve": "pnpm --filter automatic-vendor-sharing_app* --parallel serve",
     "clean": "pnpm --filter automatic-vendor-sharing_app* --parallel clean",
+    "legacy:start": "pnpm --filter automatic-vendor-sharing_app* --parallel legacy:start",
+    "legacy:build": "pnpm --filter automatic-vendor-sharing_app* --parallel legacy:build",
     "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
