--- a/advanced-api/dynamic-remotes/app3/package.json
+++ b/advanced-api/dynamic-remotes/app3/package.json
@@ -9,11 +9,16 @@
     "serve": "14.2.1",
     "webpack": "5.89.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
-    "start": "webpack-cli serve",
-    "build": "webpack --mode production",
+    "start": "rspack serve",
+    "build": "rspack --mode production",
+    "start:legacy": "webpack-cli serve",
+    "build:legacy": "webpack --mode production",
     "serve": "serve dist -p 3003",
     "clean": "rm -rf dist"
   },
