--- a/complete-react-case/component-app/package.json
+++ b/complete-react-case/component-app/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack --watch",
+    "build": "rspack build",
+    "legacy:build": "webpack --watch",
     "serve": "serve dist -p 3001",
-    "start": "concurrently \"npm run webpack\" \"npm run serve\""
+    "start": "concurrently \"npm run build\" \"npm run serve\""
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,10 @@
     "style-loader": "3.3.3",
     "url-loader": "4.1.1",
     "webpack": "5.89.0",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "5.1.4",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   },
   "dependencies": {
     "react": "^17.0.2",
