--- a/complete-react-case/main-app/package.json
+++ b/complete-react-case/main-app/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "webpack": "webpack --watch",
+    "build": "rspack build --config rspack.config.js",
+    "legacy:build": "webpack --watch",
     "serve": "serve dist -p 3002",
-    "start": "concurrently \"npm run webpack\" \"npm run serve\""
+    "start": "concurrently \"npm run build\" \"npm run serve\"",
+    "legacy:start": "concurrently \"npm run legacy:build\" \"npm run serve\""
+  },
+  "dependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +26,9 @@
     "html-webpack-plugin": "5.5.3",
     "serve": "14.2.1",
     "webpack": "5.89.0",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "5.1.4",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   }
 }
