--- a/complete-react-case/package.json
+++ b/complete-react-case/package.json
@@ -8,6 +8,7 @@
     "legacy:build": "pnpm --filter complete-react-case_* --parallel legacy:build",
     "legacy:start": "pnpm --filter complete-react-case_* --parallel legacy:start",
     "e2e:ci": "pnpm start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "legacy:e2e:ci": "pnpm legacy:start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "keywords": [],
   "author": "",
