feat: move complete react case to rspack

--- a/angular14-react/angular-profile/package.json
+++ b/angular14-react/angular-profile/package.json
@@ -9,6 +9,7 @@
     "test": "ng test"
   },
   "dependencies": {
+    "@babel/runtime": "^7.23.7",
     "@angular-builders/custom-webpack": "^14.0.1",
     "@angular/animations": "^14.2.0",
     "@angular/common": "^14.2.0",
