--- a/angular14-react/package.json
+++ b/angular14-react/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "scripts": {
     "start": "pnpm --filter angular14-react_* --parallel start",
-    "e2e:ci": "pnpm run start & wait-on http-get://localhost:4201/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm run start & wait-on http-get://localhost:4201/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome",
+    "postinstall": "find . -name \"node_modules\" -type d -prune -exec rm -rf '{}' +; pnpm install --ignore-scripts"
   },
   "devDependencies": {
     "wait-on": "7.2.0"
