feat: comprehensive demos to rspack

--- a/comprehensive-demo-react16/app-01/package.json
+++ b/comprehensive-demo-react16/app-01/package.json
@@ -13,7 +13,10 @@
     "react-router-dom": "^5.1.2",
     "serve": "^14.2.1",
     "webpack": "5.89.0",
-    "webpack-cli": "^4.0.0"
+    "webpack-cli": "^4.0.0",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
     "start": "webpack --watch",
