--- a/comprehensive-demo-react16/app-03/package.json
+++ b/comprehensive-demo-react16/app-03/package.json
@@ -11,7 +11,10 @@
     "serve": "^14.2.1",
     "styled-components": "^5.0.1",
     "webpack": "5.89.0",
-    "webpack-cli": "^4.0.0"
+    "webpack-cli": "^4.0.0",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
     "start": "webpack --watch",
