--- a/comprehensive-demo-react16/app-04/package.json
+++ b/comprehensive-demo-react16/app-04/package.json
@@ -12,12 +12,18 @@
     "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.15.1",
-    "serve": "14.2.1"
+    "serve": "14.2.1",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "start": "webpack --watch",
-    "dev": "webpack-dev-server --content-base public",
+    "legacy:build": "cross-env NODE_ENV=production webpack",
+    "build": "cross-env NODE_ENV=production rspack",
+    "start": "rspack --watch",
+    "legacy:start": "webpack --watch",
+    "dev": "rspack serve",
+    "legacy:dev": "webpack-dev-server --content-base public",
     "serve": "serve public -p 3004",
     "clean": "rm -rf dist"
   }
