feat: comprehensive demos to rspack

--- a/complete-react-case/lib-app/package.json
+++ b/complete-react-case/lib-app/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rspack build --config rspack.config.js",
-    "legacy:build": "webpack --config webpack.config.js",
+    "build": "rspack build --config rspack.config.js ",
+    "legacy:build": "webpack --config webpack.config.js --stats=minimal",
     "serve": "serve dist -p 3000",
     "start": "concurrently \"npm run build\" \"npm run serve\"",
     "legacy:start": "concurrently \"npm run legacy:build\" \"npm run serve\""
