--- a/comprehensive-demo-react16/app-01/package.json
+++ b/comprehensive-demo-react16/app-01/package.json
@@ -19,8 +19,10 @@
     "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
-    "start": "webpack --watch",
-    "build": "webpack --mode production",
+    "legacy:start": "webpack --watch",
+    "start": "rspack --watch",
+    "legacy:build": "webpack --mode production",
+    "build": "rspack --mode production",
     "serve": "serve dist -p 3001",
     "clean": "rm -rf dist"
   },
