--- a/comprehensive-demo-react16/app-03/package.json
+++ b/comprehensive-demo-react16/app-03/package.json
@@ -17,7 +17,7 @@
     "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
-    "start": "rspack --watch",
+    "start": "rspack serve",
     "build": "rspack --mode production",
     "legacy:start": "webpack --watch",
     "legacy:build": "webpack --mode production",
