--- a/comprehensive-demo-react16/package.json
+++ b/comprehensive-demo-react16/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm build && pnpm serve",
+    "legacy:start": "pnpm legacy:build && pnpm serve",
     "build": "pnpm --filter comprehensive-demo-react16_app* build",
+    "legacy:build": "pnpm --filter comprehensive-demo-react16_app* legacy:build",
     "serve": "pnpm --filter comprehensive-demo-react16_app* --parallel serve",
     "clean": "pnpm --filter comprehensive-demo-react16_app* --parallel clean",
     "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
