--- a/comprehensive-demo-react18/app-01/package.json
+++ b/comprehensive-demo-react18/app-01/package.json
@@ -16,8 +16,12 @@
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "start": "webpack --watch",
-    "build": "webpack --mode production",
+    "build": "cross-env NODE_ENV=production rspack",
+    "legacy:build": "cross-env NODE_ENV=production webpack",
+    "start": "rspack --watch",
+    "legacy:start": "webpack --watch",
+    "dev": "rspack serve",
+    "legacy:dev": "webpack-dev-server --content-base public",
     "serve": "serve dist -p 3001",
     "clean": "rm -rf dist"
   },
