--- a/comprehensive-demo-react18/app-04/package.json
+++ b/comprehensive-demo-react18/app-04/package.json
@@ -15,9 +15,12 @@
     "serve": "14.2.1"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "start": "webpack --watch",
-    "dev": "webpack-dev-server --content-base public",
+    "build": "cross-env NODE_ENV=production rspack",
+    "legacy:build": "cross-env NODE_ENV=production webpack",
+    "start": "rspack --watch",
+    "legacy:start": "webpack --watch",
+    "dev": "rspack serve",
+    "legacy:dev": "webpack-dev-server --content-base public",
     "serve": "serve public -p 3004",
     "clean": "rm -rf dist"
   }
