--- a/comprehensive-demo-react18/app-05/package.json
+++ b/comprehensive-demo-react18/app-05/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "boilerplate LitElement setup with TypeScript",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "start": "webpack --watch",
-    "dev": "webpack-dev-server --content-base public",
+    "build": "cross-env NODE_ENV=production rspack",
+    "legacy:build": "cross-env NODE_ENV=production webpack",
+    "start": "rspack --watch",
+    "legacy:start": "webpack --watch",
+    "dev": "rspack serve",
+    "legacy:dev": "webpack-dev-server --content-base public",
     "serve": "serve public -p 3005",
     "clean": "rm -rf dist"
   },
@@ -18,6 +21,9 @@
     "webpack": "5.89.0",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1",
-    "serve": "14.2.1"
+    "serve": "14.2.1",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   }
 }
