--- a/comprehensive-demo-react18/app-01/package.json
+++ b/comprehensive-demo-react18/app-01/package.json
@@ -13,10 +13,13 @@
     "react-router-dom": "^5.1.2",
     "serve": "^14.2.1",
     "webpack": "5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production rspack",
+    "build": "cross-env NODE_ENV=production rspack build",
     "legacy:build": "cross-env NODE_ENV=production webpack",
     "start": "rspack --watch",
     "legacy:start": "webpack --watch",
