--- a/comprehensive-demo-react18/app-04/package.json
+++ b/comprehensive-demo-react18/app-04/package.json
@@ -12,10 +12,13 @@
     "webpack": "5.89.0",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1",
-    "serve": "14.2.1"
+    "serve": "14.2.1",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production rspack",
+    "build": "cross-env NODE_ENV=production rspack build",
     "legacy:build": "cross-env NODE_ENV=production webpack",
     "start": "rspack --watch",
     "legacy:start": "webpack --watch",
