--- a/comprehensive-demo-react16/app-04/package.json
+++ b/comprehensive-demo-react16/app-04/package.json
@@ -8,7 +8,7 @@
     "style-loader": "3.3.3",
     "svelte": "3.59.2",
     "svelte-loader": "3.1.9",
-    "html-webpack-plugin": "5.5.3",
+    "html-webpack-plugin": "5.6.0",
     "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.15.1",
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "legacy:build": "cross-env NODE_ENV=production webpack",
-    "build": "cross-env NODE_ENV=production rspack",
+    "build": "cross-env NODE_ENV=production rspack build",
     "start": "rspack serve",
     "legacy:start": "webpack --watch",
     "dev": "rspack serve",
