--- a/comprehensive-demo-react16/app-05/package.json
+++ b/comprehensive-demo-react16/app-05/package.json
@@ -4,7 +4,7 @@
   "description": "boilerplate LitElement setup with TypeScript",
   "scripts": {
     "legacy:build": "cross-env NODE_ENV=production webpack",
-    "build": "cross-env NODE_ENV=production rspack",
+    "build": "cross-env NODE_ENV=production rspack build",
     "legacy:start": "webpack --watch",
     "start": "rspack",
     "dev": "rspack serve --port 3005",
@@ -17,7 +17,7 @@
     "lit-element": "2.5.1",
     "ts-loader": "9.5.1",
     "typescript": "4.3.5",
-    "html-webpack-plugin": "5.5.3",
+    "html-webpack-plugin": "5.6.0",
     "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.15.1",
