feat: comprehensive demos to rspack

--- a/cloud/azure-functions-node-v4/shell/api/package.json
+++ b/cloud/azure-functions-node-v4/shell/api/package.json
@@ -16,7 +16,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-router-dom": "6.10.0",
-		"webpack": "^5.78.0",
+		"webpack": "5.89.0",
 		"tslib": "2.5.0"
 	},
 	"devDependencies": {
