--- a/comprehensive-demo-react16/app-04/package.json
+++ b/comprehensive-demo-react16/app-04/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "legacy:build": "cross-env NODE_ENV=production webpack",
-    "build": "cross-env NODE_ENV=production rspack build",
+    "build": "cross-env NODE_ENV=production rspack",
     "start": "rspack serve",
     "legacy:start": "webpack --watch",
     "dev": "rspack serve",
