--- a/comprehensive-demo-react16/app-05/package.json
+++ b/comprehensive-demo-react16/app-05/package.json
@@ -4,7 +4,7 @@
   "description": "boilerplate LitElement setup with TypeScript",
   "scripts": {
     "legacy:build": "cross-env NODE_ENV=production webpack",
-    "build": "cross-env NODE_ENV=production rspack build",
+    "build": "cross-env NODE_ENV=production rspack",
     "legacy:start": "webpack --watch",
     "start": "rspack",
     "dev": "rspack serve --port 3005",
