--- a/advanced-api/automatic-vendor-sharing/app1/package.json
+++ b/advanced-api/automatic-vendor-sharing/app1/package.json
@@ -10,7 +10,7 @@
     "@rspack/core": "^0.4.5",
     "@rspack/cli": "^0.4.5",
     "@rspack/dev-server": "^0.4.5",
-    "webpack": "^5.89.0",
+    "webpack": "5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
