--- a/angular14-react/angular-profile/package.json
+++ b/angular14-react/angular-profile/package.json
@@ -26,7 +26,7 @@
     "react-dom": "^18.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "webpack": "^5.89.0",
+    "webpack": "5.89.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
