--- a/dynamic-remotes-node/package.json
+++ b/dynamic-remotes-node/package.json
@@ -13,7 +13,7 @@
     "@module-federation/node": "^0.16.0",
     "@module-federation/utilities": "^1.5.0",
     "concurrently": "^8.0.1",
-    "webpack": "^5.89.0",
+    "webpack": "5.89.0",
     "rimraf": "^5.0.5",
     "webpack-cli": "^5.1.4"
   }
