--- a/simple-node/node-host/package.json
+++ b/simple-node/node-host/package.json
@@ -8,7 +8,7 @@
     "@module-federation/node": "^2.0.2-beta.6"
   },
   "devDependencies": {
-    "webpack": "^5.80.0",
+    "webpack": "5.89.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^4.0.0"
   }
