--- a/comprehensive-demo-react18/app-02/package.json
+++ b/comprehensive-demo-react18/app-02/package.json
@@ -18,9 +18,9 @@
     "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production rspack build",
+    "build": "cross-env NODE_ENV=production rspack build --mode production",
     "legacy:build": "cross-env NODE_ENV=production webpack",
-    "start": "rspack --watch",
+    "start": "rspack cross-env NODE_ENV=production --watch",
     "legacy:start": "webpack --watch",
     "dev": "rspack serve",
     "legacy:dev": "webpack-dev-server --content-base public",
