--- a/angular14-react/react-user-list/package.json
+++ b/angular14-react/react-user-list/package.json
@@ -13,20 +13,25 @@
     "url-loader": "4.1.1",
     "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
+    "html-webpack-plugin": "^5.6.0",
+    "typescript": "^4.8.4"
   },
   "scripts": {
-    "start": "webpack-cli serve",
-    "build": "webpack --mode production",
+    "legacy:start": "webpack-cli serve",
+    "start": "rspack serve",
+    "build": "rspack build --mode production",
+    "legacy:build": "webpack --mode production",
     "serve": "serve dist -p 3002",
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-typescript": "^7.18.6",
-    "html-webpack-plugin": "^5.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "^4.8.4"
+    "react-dom": "18.2.0"
   }
 }
