feat: migrate vue build to rsbuild

--- a/angular15-vue3/vue-remote/package.json
+++ b/angular15-vue3/vue-remote/package.json
@@ -2,7 +2,7 @@
   "name": "angular15-vue3_vue-remote",
   "version": "0.1.0",
   "scripts": {
-    "serve": "rsbuild serve --port 4201",
+    "serve": "rsbuild dev --port 4201",
     "build": "rsbuild build"
   },
   "dependencies": {
