--- a/angular15-vue3/vue-remote/package.json
+++ b/angular15-vue3/vue-remote/package.json
@@ -2,8 +2,8 @@
   "name": "angular15-vue3_vue-remote",
   "version": "0.1.0",
   "scripts": {
-    "serve": "vue-cli-service serve --port 4201",
-    "build": "vue-cli-service build"
+    "serve": "rsbuild dev --port 4201",
+    "build": "rsbuild build"
   },
   "dependencies": {
     "vue": "^3.2.13",
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "5.0.8",
-    "@vue/cli-service": "5.0.8"
+    "@vue/cli-service": "5.0.8",
+    "@rsbuild/core": "^0.2.15",
+    "@rsbuild/plugin-vue": "^0.2.15",
+    "@rspack/core": "^0.4.5"
   }
 }
