feat: rspack as vendor offload for webpack

--- a/comprehensive-demo-react16/app-01/package.json
+++ b/comprehensive-demo-react16/app-01/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "legacy:start": "webpack --watch",
-    "start": "rspack --watch",
+    "start": "rspack serve",
     "legacy:build": "webpack --mode production",
     "build": "rspack --mode production",
     "serve": "serve dist -p 3001",
