--- a/comprehensive-demo-react16/package.json
+++ b/comprehensive-demo-react16/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "dev": "pnpm --filter comprehensive-demo-react16_app* start",
     "start": "pnpm build && pnpm serve",
     "legacy:start": "pnpm legacy:build && pnpm serve",
     "build": "pnpm --workspace-concurrency=1 --filter comprehensive-demo-react16_app* build",
