--- a/rspack-webpack-interop/app-01/package.json
+++ b/rspack-webpack-interop/app-01/package.json
@@ -13,17 +13,11 @@
     "react-router-dom": "^5.1.2",
     "serve": "^14.2.1",
     "webpack": "5.89.0",
-    "webpack-cli": "^5.1.4",
-    "@rspack/core": "^0.4.5",
-    "@rspack/cli": "^0.4.5",
-    "@rspack/dev-server": "^0.4.5"
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "rspack:build": "cross-env NODE_ENV=production rspack build --mode production",
     "build": "cross-env NODE_ENV=production webpack",
-    "rspack:start": "rspack cross-env NODE_ENV=production --watch",
     "start": "webpack --watch",
-    "rspack:dev": "rspack serve",
     "dev": "webpack-dev-server --content-base public",
     "serve": "serve dist -p 3001",
     "clean": "rm -rf dist"
