--- a/advanced-api/dynamic-remotes/app1/package.json
+++ b/advanced-api/dynamic-remotes/app1/package.json
@@ -9,11 +9,17 @@
     "serve": "14.2.1",
     "webpack": "5.89.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "@rspack/core": "0.4.5-canary-ac74516-20240102083734",
+    "@rspack/cli": "0.4.5-canary-ac74516-20240102083734",
+    "@rspack/dev-server": "0.4.5-canary-ac74516-20240102083734",
+    "@module-federation/runtime": "0.0.0-next-20240102063242"
   },
   "scripts": {
-    "start": "webpack-cli serve",
-    "build": "webpack --mode production",
+    "start": "rspack serve",
+    "build": "rspack --mode production",
+    "start:legacy": "webpack-cli serve",
+    "build:legacy": "webpack --mode production",
     "serve": "serve dist -p 3001",
     "clean": "rm -rf dist"
   },
