Add legacy start and e2e test commands to package.json
This commit introduces "legacy:start" and "legacy:e2e:ci" scripts in "dynamic-remotes" and "automatic-vendor-sharing" packages. These additions facilitate running and testing the application in legacy mode, providing greater test coverage and ensuring backward compatibility.

--- a/advanced-api/automatic-vendor-sharing/package.json
+++ b/advanced-api/automatic-vendor-sharing/package.json
@@ -14,6 +14,7 @@
     "legacy:start": "pnpm --filter automatic-vendor-sharing_app* --parallel legacy:start",
     "legacy:build": "pnpm --filter automatic-vendor-sharing_app* --parallel legacy:build",
     "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "legacy:e2e:ci": "pnpm legacy:start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.2.0"
