--- a/advanced-api/dynamic-remotes-runtime-environment-variables/host/package.json
+++ b/advanced-api/dynamic-remotes-runtime-environment-variables/host/package.json
@@ -10,16 +10,21 @@
     "serve": "14.2.1",
     "webpack": "5.89.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
-    "start": "chmod +x ./env.sh && cp env-config.json ./public/ && webpack-cli serve",
-    "build": "webpack --mode production",
+    "start": "chmod +x ./env.sh && cp env-config.json ./public/ && rspack serve",
+    "build": "rspack build --mode production",
     "serve": "serve dist -p 3001",
     "clean": "rm -rf dist",
     "docker:build": "docker build . -t csr-env/host:0.0.0",
     "docker:run": "docker run -it --name csr-env-host -p 3000:80 -d -e API_URL=https://host.com/api csr-env/host:0.0.0",
-    "docker:rm": "docker rm -f csr-env-host"
+    "docker:rm": "docker rm -f csr-env-host",
+    "legacy:start": "chmod +x ./env.sh && cp env-config.json ./public/ && webpack-cli serve ",
+    "legacy:build": "webpack --mode production"
   },
   "dependencies": {
     "moment": "^2.29.4",
