--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -152,13 +152,20 @@ jobs:
           npm i pnpm -g
           pnpm i --frozen-lockfile
 
-      - name: Run sample e2e tests
+      - name: Run sample rspack e2e tests
         timeout-minutes: 30
         id: run-sample-e2e-tests
         run: |
           node -v
           npx cypress install
           pnpm --filter "${{ matrix.container }}" e2e:ci
+
+      - name: Run sample webpack e2e tests
+        timeout-minutes: 30
+        id: run-sample-e2e-tests
+        run: |
+          node -v
+          npx cypress install
           pnpm --filter "${{ matrix.container }}" legacy:e2e:ci
 
       - name: Create artifacts for Allure report
