Renamed IDs of rspack and webpack e2e tests
This commit changes the IDs of the 'rspack' and 'webpack' end-to-end (e2e) test jobs in the GitHub Actions workflow. Each testing job now has a unique ID, which simplifies identification and improves troubleshooting when issues arise during tests.

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -154,7 +154,7 @@ jobs:
 
       - name: Run sample rspack e2e tests
         timeout-minutes: 30
-        id: run-sample-e2e-tests
+        id: run-rspack-e2e-tests
         run: |
           node -v
           npx cypress install
@@ -162,7 +162,7 @@ jobs:
 
       - name: Run sample webpack e2e tests
         timeout-minutes: 30
-        id: run-sample-e2e-tests
+        id: run-webpack-e2e-tests
         run: |
           node -v
           npx cypress install
