Swap rspack and webpack e2e tests in GitHub Actions Workflow
The rspack and webpack e2e tests in the GitHub Actions Workflow have been swapped. The command to kill all node processes has been added after the test executions to prevent potential port conflicts. This increases the reliability of the tests and reduces the possible test failures

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -153,15 +153,6 @@ jobs:
           pnpm i --frozen-lockfile
           npx cypress install
 
-      - name: Run sample rspack e2e tests
-        timeout-minutes: 30
-        id: run-rspack-e2e-tests
-        run: |
-          node -v
-          pnpm --filter "${{ matrix.container }}" e2e:ci
-          (lsof -i tcp:3000-3999 -i tcp:4000-4999 -i tcp:8080-8100 | awk 'NR!=1 {print $2}' | xargs -r kill) 2> /dev/null
-
-
       - name: Run sample webpack e2e tests
         timeout-minutes: 30
         id: run-webpack-e2e-tests
@@ -169,6 +160,16 @@ jobs:
           node -v
           pnpm --filter "${{ matrix.container }}" legacy:e2e:ci
           (lsof -i tcp:3000-3999 -i tcp:4000-4999 -i tcp:8080-8100 | awk 'NR!=1 {print $2}' | xargs -r kill) 2> /dev/null
+          killall node
+
+      - name: Run sample rspack e2e tests
+        timeout-minutes: 30
+        id: run-rspack-e2e-tests
+        run: |
+          node -v
+          pnpm --filter "${{ matrix.container }}" e2e:ci
+          (lsof -i tcp:3000-3999 -i tcp:4000-4999 -i tcp:8080-8100 | awk 'NR!=1 {print $2}' | xargs -r kill) 2> /dev/null
+          killall node
 
       - name: Create artifacts for Allure report
         id: create-artifacts-allure-report
