--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -152,6 +152,7 @@ jobs:
           npm i pnpm -g
           pnpm i --frozen-lockfile
           npx cypress install
+          cypress verify
 
       - name: Run sample webpack e2e tests
         timeout-minutes: 30
