Update Cypress verification command in GitHub action
The Cypress verification command in the GitHub action workflow has been updated from 'cypress verify' to 'npx cypress verify'. This allows for better consistency when running the command, ensuring the command runs correctly in different environments.

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -152,7 +152,7 @@ jobs:
           npm i pnpm -g
           pnpm i --frozen-lockfile
           npx cypress install
-          cypress verify
+          npx cypress verify
 
       - name: Run sample webpack e2e tests
         timeout-minutes: 30
