Rearrange script commands in multiple package.json files
The "start:legacy" and "build:legacy" script commands in package.json files of app1, app2, and app3 have been rearranged to "legacy:start" and "legacy:build". This change should provide more command readability and consistency across different applications.

--- a/advanced-api/dynamic-remotes/app3/package.json
+++ b/advanced-api/dynamic-remotes/app3/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "start": "rspack serve",
     "build": "rspack --mode production",
-    "start:legacy": "webpack-cli serve",
-    "build:legacy": "webpack --mode production",
+    "legacy:start": "webpack-cli serve",
+    "legacy:build": "webpack --mode production",
     "serve": "serve dist -p 3003",
     "clean": "rm -rf dist"
   },
