--- a/advanced-api/dynamic-remotes/app1/package.json
+++ b/advanced-api/dynamic-remotes/app1/package.json
@@ -13,13 +13,14 @@
     "@rspack/core": "0.4.5-canary-ac74516-20240102083734",
     "@rspack/cli": "0.4.5-canary-ac74516-20240102083734",
     "@rspack/dev-server": "0.4.5-canary-ac74516-20240102083734",
-    "@module-federation/runtime": "0.0.0-next-20240102063242"
+    "@module-federation/runtime": "0.0.0-next-20240102063242",
+    "@module-federation/enhanced": "^0.0.0-next-20240105144747"
   },
   "scripts": {
     "start": "rspack serve",
     "build": "rspack --mode production",
-    "start:legacy": "webpack-cli serve",
-    "build:legacy": "webpack --mode production",
+    "legacy:start": "webpack-cli serve",
+    "legacy:build": "webpack --mode production",
     "serve": "serve dist -p 3001",
     "clean": "rm -rf dist"
   },
