--- a/runtime-plugins/control-sharing/app1/package.json
+++ b/runtime-plugins/control-sharing/app1/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "lodash": "^4.17.21"
   }
 }
