--- a/runtime-plugins/control-sharing/app2/package.json
+++ b/runtime-plugins/control-sharing/app2/package.json
@@ -12,7 +12,9 @@
     "@rspack/dev-server": "^0.4.5",
     "webpack": "5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "@module-federation/runtime": "next",
+    "@module-federation/enhanced": "next"
   },
   "scripts": {
     "start": "rspack serve -c rspack.config.js",
@@ -24,6 +26,7 @@
   },
   "dependencies": {
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "lodash": "^3.10.1"
   }
 }
