descriptions in advanced API
New descriptions have been added in the package.json files of advanced-api, dynamic-remotes, and automatic-vendor-sharing. This helps in better understanding the nature and use of each package/module.

--- a/advanced-api/automatic-vendor-sharing/package.json
+++ b/advanced-api/automatic-vendor-sharing/package.json
@@ -4,6 +4,7 @@
     "./app1",
     "./app2"
   ],
+  "description": "This example demos automatic-vendor-sharing, each host/remote will share all vendors possible",
   "private": true,
   "version": "0.0.0",
   "scripts": {
