--- a/advanced-api/dynamic-remotes/package.json
+++ b/advanced-api/dynamic-remotes/package.json
@@ -6,6 +6,7 @@
     "./app3"
   ],
   "private": true,
+  "description": "Dynamic Remote Vendor Sharing Example is a basic demonstration of a host application loading remote components and dynamically sharing vendor code among unknown remotes.",
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --filter dynamic-remotes_app* --parallel start",
