Add descriptions to microfrontends package.json files
Added descriptions to the package.json files in angular12-microfrontends, angular11-microfrontends-ngxs, and angular11-microfrontends-ngrx folders. These descriptions provide improved clarity on each project's purpose and their specific use of Webpack 5 Module Federation with Angular.

--- a/angular11-microfrontends-ngxs/package.json
+++ b/angular11-microfrontends-ngxs/package.json
@@ -1,5 +1,6 @@
 {
   "name": "angular11-microfrontends-ngxs",
+  "description": "This project shows an example of using Webpack 5 Module Federation with Angular `11.0.0-rc.2` using shared module and NGXS state management.\n",
   "workspaces": [
     "./projects/*"
   ],
