--- a/angular12-microfrontends/package.json
+++ b/angular12-microfrontends/package.json
@@ -1,5 +1,6 @@
 {
   "name": "angular12-microfrontends",
+  "description": "This project shows an example of using Webpack 5 Module Federation with Angular v11-next.5, note the use of **yarn**, this is required to override the webpack version for the angular cli",
   "workspaces": [
     "./projects/*"
   ],
