--- a/angular11-microfrontends-ngrx/package.json
+++ b/angular11-microfrontends-ngrx/package.json
@@ -1,5 +1,6 @@
 {
   "name": "angular11-microfrontends-ngrx",
+  "description": "This project shows an example of using Webpack 5 Module Federation with Angular `11.0.0-rc.2` using shared module and NgRx state management.",
   "workspaces": [
     "./projects/*"
   ],
