Add project descriptions to multiple package.json files
Newly added descriptions provide better insights into each project's purpose and their uses of different technologies. This makes understanding the purpose and functionality of each project easier for developers and users. Descriptions were added to projects involving Webpack 5 Module Federation, Angular, and several others across multiple directories.

--- a/angular-universal-ssr/package.json
+++ b/angular-universal-ssr/package.json
@@ -1,5 +1,6 @@
 {
   "name": "angular-universal-ssr",
+  "description": "Angular Universal SSR with Module Federation",
   "private": true,
   "workspaces": [
     "./client-app",
