--- a/complete-react-case/package.json
+++ b/complete-react-case/package.json
@@ -1,5 +1,6 @@
 {
   "name": "complete-react-case",
+  "description": "A complete Module Federation Case with React.",
   "private": true,
   "version": "0.0.0",
   "scripts": {
