--- a/angular15-vue3/package.json
+++ b/angular15-vue3/package.json
@@ -1,5 +1,6 @@
 {
   "name": "angular15-vue3",
+  "description": "This project shows an example of using Webpack 5 Module Federation with Angular `15` using Vue 3 components from remote.",
   "workspaces": [
     "vue-remote"
   ],
