--- a/apollo-client/package.json
+++ b/apollo-client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "apollo-client",
+  "description": "This example demonstrates using Apollo Client with Module Federation.",
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --filter apollo-client_* --parallel start",
