--- a/basic-host-remote/package.json
+++ b/basic-host-remote/package.json
@@ -4,6 +4,7 @@
     "./app1",
     "./app2"
   ],
+  "description": "Basic Host and Remote Example",
   "private": true,
   "version": "0.0.0",
   "scripts": {
