--- a/bi-directional/package.json
+++ b/bi-directional/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bi-directional",
+  "description": "Basic Bi-directional Federation application",
   "private": true,
   "workspaces": [
     "./app1",
