Updated package.json files with project descriptions
Descriptions added to different projects provide better comprehension of the specific functions and utilization of various technologies. This enhancement will clarify the purpose of each project for developers, making them more accessible and user-friendly. Changes have been implemented in projects using Webpack 5 Module Federation, Angular and others.

--- a/cra/package.json
+++ b/cra/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cra",
   "version": "0.0.1",
+  "description": "Create React app Running with rsbuild",
   "workspaces": [
     "./host",
     "./remote"
