--- a/different-react-versions-16-17/package.json
+++ b/different-react-versions-16-17/package.json
@@ -1,5 +1,6 @@
 {
   "name": "different-react-versions-16-17",
+  "description": "This example demos the ability to load two separate versions of react.",
   "version": "1.0.0",
   "scripts": {
     "start": "pnpm --filter different-react-versions-16-17_* --parallel start",
