Add description to package.json in cra-react-app-rewired
This commit includes a description "CRA with react-app-rewired" added to the package.json file in 'cra-react-app-rewired'. It provides a brief about the project that can help other developers understand the purpose of the project.

--- a/cra-react-app-rewired/package.json
+++ b/cra-react-app-rewired/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cra-react-app-rewired",
+  "description": "CRA with react-app-rewired",
   "private": true,
   "version": "0.0.0",
   "scripts": {
