Add or update description in package.json of multiple apps
This commit adds or updates the 'description' field in the package.json files of several applications in the React 18 and React 16 comprehensive demos. This helps to provide more information about the purpose or functionality of these applications and gives a clear understanding of each individual application in the project.

--- a/comprehensive-demo-react16/app-01/package.json
+++ b/comprehensive-demo-react16/app-01/package.json
@@ -1,6 +1,7 @@
 {
   "name": "comprehensive-demo-react16_app-01",
   "version": "0.0.0",
+  "description": "ReactJS - acts as the app shell plus is an aggregation with other remotes",
   "dependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
