--- a/comprehensive-demo-react16/app-05/package.json
+++ b/comprehensive-demo-react16/app-05/package.json
@@ -1,7 +1,7 @@
 {
   "name": "comprehensive-demo-react16_app-05",
   "version": "1.0.0",
-  "description": "boilerplate LitElement setup with TypeScript",
+  "description": "LitElement setup with TypeScript",
   "scripts": {
     "legacy:build": "cross-env NODE_ENV=production webpack",
     "build": "cross-env NODE_ENV=production rspack",
