--- a/comprehensive-demo-react16/package.json
+++ b/comprehensive-demo-react16/package.json
@@ -1,5 +1,6 @@
 {
   "name": "comprehensive-demo-react16",
+  "description": "Multi-framework comprehensive demo for React 16",
   "private": true,
   "version": "0.0.0",
   "scripts": {
