--- a/comprehensive-demo-react18/app-02/package.json
+++ b/comprehensive-demo-react18/app-02/package.json
@@ -1,5 +1,6 @@
 {
   "name": "comprehensive-demo-react18_app-02",
+  "description": "ReactJS - plus is an aggregation with other remotes",
   "version": "0.0.0",
   "dependencies": {
     "@babel/core": "^7.23.2",
