--- a/comprehensive-demo-react18/app-04/package.json
+++ b/comprehensive-demo-react18/app-04/package.json
@@ -1,5 +1,6 @@
 {
   "name": "comprehensive-demo-react18_app-04",
+  "description": "SvelteJS",
   "version": "1.0.0",
   "devDependencies": {
     "cross-env": "7.0.3",
