--- a/comprehensive-demo-react18/package.json
+++ b/comprehensive-demo-react18/package.json
@@ -1,5 +1,6 @@
 {
   "name": "comprehensive-demo-react18",
+  "description": "Multi-framework comprehensive demo for React 18",
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm build && pnpm serve",
