--- a/comprehensive-demo-react16/app-03/package.json
+++ b/comprehensive-demo-react16/app-03/package.json
@@ -1,5 +1,6 @@
 {
   "name": "comprehensive-demo-react16_app-03",
+  "description": "ReactJS",
   "version": "0.0.0",
   "dependencies": {
     "@babel/core": "^7.23.2",
