Update apps to use rsPack and add legacy mode
Switched primary build and start scripts in both app1 and app2 to use rsPack instead of webpack-cli. Introduced legacy commands to maintain webpack-cli compatibility. rsPack was introduced for better compatibility with running different React versions in isolated instances. Legacy commands ensure backward compatibility and flexibility.

--- a/different-react-versions-16-18/package.json
+++ b/different-react-versions-16-18/package.json
@@ -1,5 +1,6 @@
 {
   "name": "different-react-versions-16-18",
+  "description": "Two apps, one using React 16 and the other using React 18",
   "version": "1.0.0",
   "workspaces": [
     "app1",
